# deploiement-apli-kubernetes-argocd

./: Dockerfile.txt  Dockerfile.yml  README.md  compose.yml  sonar-project.properties  test  values-sonarqube.yaml
.github/workflows/: This azure.yml  actu-aks.yml  aks 2.yml  aks-creer-deploie.yml  argot-test.yml  build rust.yml  build.yml  contoso-test.yml  createcluste-sonarqube-argocd-apli-monitor - Copie.yml  createcluste-sonarqube-argocd-apli-monitor.yml  soanr-action.yml  sonarqube.yml  suprime-cluster.yml
argocd/: argocd-ha.yml  install-argocd-ha.yml  values-argo-cd.yaml
az/: Dockerfile
ecommerce/: value1.yaml  values.yaml  values1.yaml  values2.yaml  values2.yml
ecommerce/templates/: deployment-rabbitmq.yaml  deployment.yaml  deployment2.yaml  secret-orderqueue.yaml  secret-rabbitmq.yaml
evershop/templates/: NOTES.txt  adminer.yml  deployment-db.yaml  deployment.yaml  service-db.yaml  service.yaml
libressl/: Dockerfile
order-service/: Dockerfile  package-lock.json
product-service/: Cargo.toml  Dockerfile
store-front/: Dockerfile  package-lock.json
test-product-service/: Dockerfile  Dockerfile-build  Dockerfile.build
