[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "product-service"

[lib]
name = "product_service"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
log = "0.4.21"
env_logger = "0.11.3"
futures-util = "0.3.30"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-19.0.0", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-19.0.0" }
ctor = "0.2.7"
